[package]
name = "prompt"
version = "0.1.0"
authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "1.9"
dirs-sys = "0.3"
git2 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
whoami = "0.7"
